[package]
name = "RomaAssistente"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
axum = { version = "0.7.5", features = ["macros"] }
serde = { version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
tower-http = "0.5.2"
tower-cookies = "0.10.0"
lazy-regex = "3.1.0"
